# swagger.yaml
@@ -9,7 +9,7 @@ info:
   license:
     name: Apache 2.0
     url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
-host: 'localhost'
+host: 'localhost:8080'
 basePath: /v1
 tags:
   - name: source
@@ -38,17 +38,16 @@ paths:
           in: path
           description: ID of source to update
           required: true
-          type: integer
-          format: int64
+          type: string
         - name: additionalMetadata
           in: formData
           description: Additional data to pass to server
           required: false
           type: string
-        - name: file
+        - name: dataFile
           in: formData
           description: file to upload
-          required: false
+          required: true
           type: file
       responses:
         '200':
@@ -214,6 +213,24 @@ paths:
         '404':
           description: Entity not found
     delete:
+      tags:
+        - entity
+      summary: deletes an entity
+      description: ''
+      operationId: deleteEntity
+      produces:
+        - application/json
+      parameters:
+        - name: entityId
+          in: path
+          description: ID of entity to fetch
+          required: true
+          type: string
+      responses:
+        '200':
+          description: successful operation
+        '404':
+          description: Entity not found
   '/entities/property/{propName}/{propValue}':
     get:
       tags:
